--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,226 @@
 @import "../fonts/opensans/font.css";
+@import "mixin";
 
 body{
   font-family: 'Open Sans Regular', sans-serif;
+}
+$blue:#423FFF;
+$purple:#B80CE8;
+$red:#FF0000;
+$orange:#E8660C;
+$yellow:#FFC10D;
+$white:#FFFFFF;
+$black-gray:#333333;
+$light-gray:#f5f5f5;
+#header{
+  .top{
+    padding: 15px 0px;
+    .title{
+      font-weight: bold;
+      font-size: 18px;
+      margin: 0;
+    }
+  }
+  .middle{
+    background: $blue;
+    .navbar{
+      padding: 0px 15px;
+      .navbar-brand{
+        color: $orange;
+      }
+      .navbar-collapse{
+        .navbar-nav{
+          .nav-item{
+            .nav-link{
+              @include transition(300ms all);
+              padding: 15px 10px;
+              color: $white;
+              margin-right: 5px;
+              &:hover,&.active{
+                background: $yellow;
+                color: $white;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  .bottom{
+    background: $light-gray;
+    .navbar{
+      .navbar-collapse{
+        .navbar-nav{
+          .nav-item{
+            .nav-link{
+              @include transition(300ms all);
+              margin: 0px 10px;
+              padding: 10px 15px;
+              color: $black-gray;
+              &:hover,&.active{
+                @include border-radius(20px 0px 20px 0px);
+                background: rgba($black-gray,.2);
+              }
+              i{
+                margin-right: 10px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.main-slider{
+  min-height: 400px;
+  width: 100%;
+  background-image: url("../images/mountain-1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
+  @include box-shadow(0px 11px 21px -12px #333);
+}
+.main-referans{
+  padding-top: 30px;
+  .sec-title{
+    background: rgba($blue,.4);
+    width: 100%;
+    padding: 10px 15px;
+    color: $white;
+    border: 2px solid rgba($blue,.4);
+    @include border-radius(4px);
+  }
+  .referans-slider{
+    position: relative;
+    .owl-carousel{
+      .owl-stage-outer {
+        padding: 0px 0px 30px 0px;
+        .item {
+          position: relative;
+          @include border-radius(4px);
+          @include box-shadow(0px 11px 21px -12px #333);
+          overflow: hidden;
+          img{
+            @include transition(300ms all);
+          }
+          &:hover{
+            img{
+              @include transform(scale(1.1))
+            }
+          }
+        }
+      }
+      .owl-dot{
+        display: none;
+      }
+      .owl-nav {
+        margin: 0;
+        display: block;
+        button {
+          @include transition(300ms all);
+          position: absolute;
+          z-index: 1;
+          width: 30px;
+          height: 30px;
+          margin: 0;
+          outline: 0;
+          border: 1px solid rgba($black-gray,.7);
+          top: calc(51% - 30px);
+          display: flex;
+          span{
+            margin: auto;
+          }
+          &.owl-prev {
+            left: -35px;
+          }
+          &.owl-next {
+            right: -35px;
+          }
+          &:hover {
+            background: $black-gray;
+            color: $light-gray;
+          }
+        }
+      }
+    }
+  }
+}
+.main-phuket{
+  margin-bottom: 30px;
+  .phuket-wrap{
+    width: 100%;
+    padding: 40px 30px;
+    position: relative;
+    @include border-radius(4px);
+    overflow: hidden;
+    &:after{
+      content: '';
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      background-color: rgba($blue,.8);
+    }
+    &:before{
+      content: '';
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-image: url('../images/referans-phuket/phuket-bg.jpg') ;
+      background-size:100% ;
+      background-repeat: no-repeat ;
+      background-attachment: fixed;
+      background-position: top center;
+      z-index: -2;
+
+    }
+    .sec-title{
+      text-align: center;
+      margin-bottom: 35px;
+      color: $white;
+    }
+    [class*=" imghvr-"],[class^=imghvr-]{
+      background-color: transparent;
+      &:before{
+        background: rgba($red,.6);
+      }
+      figcaption{
+        background-color: transparent;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: calc(100% - 44px);
+        i{
+          font-size: 30px;
+        }
+      }
+    }
+    .info-wrap{
+      position: relative;
+      z-index: 1;
+      background: $yellow;
+      .info{
+        padding: 10px 15px;
+        margin-bottom: 0;
+        .price{
+          display: block;
+          float: right;
+        }
+      }
+    }
+  }
+}
+#footer{
+  color: $white;
+  background: $blue;
+  .footer-wrap{
+    padding: 20px 30px;
+  }
 }
 
 @media (min-width: 576px) { }
