--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -25,3 +25,11 @@
   -moz-border-radius: $property;
   border-radius: $property;
 }
+$blue:#423FFF;
+$purple:#B80CE8;
+$red:#FF0000;
+$orange:#E8660C;
+$yellow:#FFC10D;
+$white:#FFFFFF;
+$black-gray:#333333;
+$light-gray:#f5f5f5;
