--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,17 +1,11 @@
 @import "../fonts/opensans/font.css";
 @import "mixin";
+@import "phuket";
+
 
 body{
   font-family: 'Open Sans Regular', sans-serif;
 }
-$blue:#423FFF;
-$purple:#B80CE8;
-$red:#FF0000;
-$orange:#E8660C;
-$yellow:#FFC10D;
-$white:#FFFFFF;
-$black-gray:#333333;
-$light-gray:#f5f5f5;
 #header{
   .top{
     padding: 15px 0px;
